``` feat(mpu6050): 添加 MPU6050 传感器支持并初始化 I2C1 接口
新增 MPU6050 传感器驱动，配置 I2C1 接口用于与 MPU6050 通信。
在 main 函数中调用 MPU6050 初始化和数据读取函数，并在 OLED 上显示角度信息。
同时更新了相关外设目录结构和 I2C 初始化代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ endfunction()
 USER_ADD_DIR(${CMAKE_SOURCE_DIR}/src/motor)
 USER_ADD_DIR(${CMAKE_SOURCE_DIR}/src/encoder)
 USER_ADD_DIR(${CMAKE_SOURCE_DIR}/src/oled)
+USER_ADD_DIR(${CMAKE_SOURCE_DIR}/src/mpu6050)
 
 add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
