--- a/openocd.cfg
+++ b/openocd.cfg
@@ -2,10 +2,10 @@
 
 # 1. 选择调试器接口 (Interface)
 # 如果你用的是 ST-Link V2 (最常见的长条形或方块形调试器)
-source [find interface/stlink.cfg]
+#source [find interface/stlink.cfg]
 
 # 如果你用的是 DAPLink (开源调试器，或者某些开发板自带的)
-# source [find interface/cmsis-dap.cfg]
+source [find interface/cmsis-dap.cfg]
 
 # 2. 选择通信方式
 transport select hla_swd
